@@ -1474,27 +1474,26 @@ public class PdfJsonConversionService {
             return;
         }
         switch (value.getType()) {
-            case STREAM:
+            case STREAM -> {
                 if (value.getStream() != null) {
                     value.getStream().setRawData(null);
                 }
-                break;
-            case ARRAY:
+            }
+            case ARRAY -> {
                 if (value.getItems() != null) {
                     for (PdfJsonCosValue item : value.getItems()) {
                         stripStreamRawData(item, visited);
                     }
                 }
-                break;
-            case DICTIONARY:
+            }
+            case DICTIONARY -> {
                 if (value.getEntries() != null) {
                     for (PdfJsonCosValue entry : value.getEntries().values()) {
                         stripStreamRawData(entry, visited);
                     }
                 }
-                break;
-            default:
-                break;
+            }
+            default -> {}
         }
     }
 
@@ -1783,20 +1782,15 @@ public class PdfJsonConversionService {
         if (format == null) {
             return 5;
         }
-        switch (format) {
-            case "ttf":
-                return 0;
-            case "truetype":
-                return 1;
-            case "otf":
-            case "cff":
-            case "type1c":
-            case "cidfonttype0c":
-                return 2;
-            default:
+        return switch (format) {
+            case "ttf" -> 0;
+            case "truetype" -> 1;
+            case "otf", "cff", "type1c", "cidfonttype0c" -> 2;
+            default -> {
                 log.debug("[FONT-DEBUG] Unknown font format '{}' from {}", format, origin);
-                return 4;
-        }
+                yield 4;
+            }
+        };
     }
 
     private record FontModelCacheEntry(
@@ -2688,7 +2682,7 @@ public class PdfJsonConversionService {
 
                     // Find which page the field is on
                     PDAnnotationWidget widget =
-                            field.getWidgets().isEmpty() ? null : field.getWidgets().get(0);
+                            field.getWidgets().isEmpty() ? null : field.getWidgets().getFirst();
                     if (widget != null) {
                         PDPage fieldPage = widget.getPage();
                         if (fieldPage != null) {
@@ -3164,7 +3158,7 @@ public class PdfJsonConversionService {
                         && imageObjectNames != null
                         && !imageObjectNames.isEmpty()
                         && !targetTokens.isEmpty()) {
-                    Object previous = targetTokens.get(targetTokens.size() - 1);
+                    Object previous = targetTokens.getLast();
                     if (previous instanceof COSName cosName
                             && imageObjectNames.contains(cosName.getName())) {
                         targetTokens.remove(targetTokens.size() - 1);
@@ -3754,7 +3748,7 @@ public class PdfJsonConversionService {
             return;
         }
         switch (space) {
-            case "DeviceRGB":
+            case "DeviceRGB" -> {
                 if (components.length >= 3) {
                     if (nonStroking) {
                         contentStream.setNonStrokingColor(
@@ -3763,8 +3757,8 @@ public class PdfJsonConversionService {
                         contentStream.setStrokingColor(components[0], components[1], components[2]);
                     }
                 }
-                break;
-            case "DeviceCMYK":
+            }
+            case "DeviceCMYK" -> {
                 if (components.length >= 4) {
                     if (nonStroking) {
                         contentStream.setNonStrokingColor(
@@ -3774,8 +3768,8 @@ public class PdfJsonConversionService {
                                 components[0], components[1], components[2], components[3]);
                     }
                 }
-                break;
-            case "DeviceGray":
+            }
+            case "DeviceGray" -> {
                 if (components.length >= 1) {
                     if (nonStroking) {
                         contentStream.setNonStrokingColor(components[0]);
@@ -3783,9 +3777,8 @@ public class PdfJsonConversionService {
                         contentStream.setStrokingColor(components[0]);
                     }
                 }
-                break;
-            default:
-                log.debug("[ColorApply] Skipping unsupported color space {}", space);
+            }
+            default -> log.debug("[ColorApply] Skipping unsupported color space {}", space);
         }
     }
 
@@ -3940,7 +3933,7 @@ public class PdfJsonConversionService {
                 }
                 String operatorName = operator.getName();
                 switch (operatorName) {
-                    case "Tf":
+                    case "Tf" -> {
                         if (i >= 2 && tokens.get(i - 2) instanceof COSName fontResourceName) {
                             currentFont = resources.getFont(fontResourceName);
                             currentFontName = fontResourceName.getName();
@@ -3959,8 +3952,8 @@ public class PdfJsonConversionService {
                             log.debug(
                                     "Tf operator missing resource operand; clearing current font");
                         }
-                        break;
-                    case "Tj":
+                    }
+                    case "Tj" -> {
                         if (i == 0 || !(tokens.get(i - 1) instanceof COSString)) {
                             log.debug(
                                     "Encountered Tj without preceding string operand; aborting rewrite");
@@ -3982,8 +3975,8 @@ public class PdfJsonConversionService {
                             log.debug("Failed to rewrite Tj operator; aborting rewrite");
                             return false;
                         }
-                        break;
-                    case "TJ":
+                    }
+                    case "TJ" -> {
                         if (i == 0 || !(tokens.get(i - 1) instanceof COSArray array)) {
                             log.debug("Encountered TJ without array operand; aborting rewrite");
                             return false;
@@ -4003,9 +3996,8 @@ public class PdfJsonConversionService {
                             log.debug("Failed to rewrite TJ operator; aborting rewrite");
                             return false;
                         }
-                        break;
-                    default:
-                        break;
+                    }
+                    default -> {}
                 }
             }
 
@@ -5246,7 +5238,7 @@ public class PdfJsonConversionService {
                 throws IOException {
             if (OperatorName.DRAW_OBJECT.equals(operator.getName())
                     && !operands.isEmpty()
-                    && operands.get(0) instanceof COSName name) {
+                    && operands.getFirst() instanceof COSName name) {
                 currentXObjectName = name;
             }
             super.processOperator(operator, operands);
@@ -5982,26 +5974,17 @@ public class PdfJsonConversionService {
         if (renderingMode == null) {
             return null;
         }
-        switch (renderingMode) {
-            case 0:
-                return RenderingMode.FILL;
-            case 1:
-                return RenderingMode.STROKE;
-            case 2:
-                return RenderingMode.FILL_STROKE;
-            case 3:
-                return RenderingMode.NEITHER;
-            case 4:
-                return RenderingMode.FILL_CLIP;
-            case 5:
-                return RenderingMode.STROKE_CLIP;
-            case 6:
-                return RenderingMode.FILL_STROKE_CLIP;
-            case 7:
-                return RenderingMode.NEITHER_CLIP;
-            default:
-                return null;
-        }
+        return switch (renderingMode) {
+            case 0 -> RenderingMode.FILL;
+            case 1 -> RenderingMode.STROKE;
+            case 2 -> RenderingMode.FILL_STROKE;
+            case 3 -> RenderingMode.NEITHER;
+            case 4 -> RenderingMode.FILL_CLIP;
+            case 5 -> RenderingMode.STROKE_CLIP;
+            case 6 -> RenderingMode.FILL_STROKE_CLIP;
+            case 7 -> RenderingMode.NEITHER_CLIP;
+            default -> null;
+        };
     }
 
     /**
@@ -6914,31 +6897,33 @@ public class PdfJsonConversionService {
         if (!visited.add(value)) {
             return false;
         }
-        switch (value.getType()) {
-            case STREAM:
+        return switch (value.getType()) {
+            case STREAM -> {
                 PdfJsonStream stream = value.getStream();
-                return stream == null || stream.getRawData() == null;
-            case ARRAY:
+                yield stream == null || stream.getRawData() == null;
+            }
+            case ARRAY -> {
                 if (value.getItems() != null) {
                     for (PdfJsonCosValue item : value.getItems()) {
                         if (hasMissingStreamData(item, visited)) {
-                            return true;
+                            yield true;
                         }
                     }
                 }
-                return false;
-            case DICTIONARY:
+                yield false;
+            }
+            case DICTIONARY -> {
                 if (value.getEntries() != null) {
                     for (PdfJsonCosValue entry : value.getEntries().values()) {
                         if (hasMissingStreamData(entry, visited)) {
-                            return true;
+                            yield true;
                         }
                     }
                 }
-                return false;
-            default:
-                return false;
-        }
+                yield false;
+            }
+            default -> false;
+        };
     }
 
     /** Schedules automatic cleanup of cached documents after 30 minutes. */
